--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>seauto.junit.sample</groupId>
   <artifactId>junit.sample</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.9.0</version>
   <properties>
     <test.config.threads>1</test.config.threads>
   </properties>
