--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>seauto.junit.sample</groupId>
-  <artifactId>junit.sample</artifactId>
-  <version>0.9.0</version>
+  <groupId>com.partnet.sample</groupId>
+  <artifactId>seauto.junit.sample</artifactId>
+  <version>0.9.0-SNAPSHOT</version>
+  
+  <name>SeAuto JUnit Sample</name>
+
+  <description>Sample project for SeAuto: a bridge to Selenium from your favorite test framework.</description>
+  <url>https://github.com/partnet/seauto-junit-sample</url>
+  <scm>
+    <url>https://github.com/partnet/seauto-junit-sample.git</url>
+  </scm>
+
+  <licenses>
+    <license>
+      <name>Licensed under the Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name />
+    </developer>
+  </developers>
+  
   <properties>
     <test.config.threads>1</test.config.threads>
   </properties>
