--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.partnet.sample</groupId>
   <artifactId>seauto.junit.sample</artifactId>
-  <version>0.9.0-SNAPSHOT</version>
+  <version>0.9.0</version>
   
   <name>SeAuto JUnit Sample</name>
 
